# WEART-SDK-Cpp

./: .gitignore  AMI-IIT_MODIFICATION.md  CMakeLists.txt  MiddlewareStatusListener.cpp  README.md  WeArtAnalogSensorData.cpp  WeArtClient.cpp  WeArtCommon.h  WeArtEffect.cpp  WeArtEffect.h  WeArtGloveLib.h  WeArtHapticObject.h  WeArtMessageListener.h  WeArtMessageSerializer.cpp  WeArtTemperature.h  WeArtTexture.h  WeArtThimbleTrackingObject.h  WeArtTrackingCalibration.h  WeArtTrackingRawData.cpp  WeArtTrackingRawData.h
include/WEART_SDK/: WeArtAnalogSensorData.h  WeArtClient.h  WeArtCommon.h  WeArtMessages.h
src/: MiddlewareStatusListener.cpp  WeArtAnalogSensorData.cpp  WeArtClient.cpp  WeArtEffect.cpp  WeArtHapticObject.cpp  WeArtMessageSerializer.cpp  WeArtMessages.cpp  WeArtThimbleTrackingObject.cpp  WeArtTrackingCalibration.cpp  WeArtTrackingRawData.cpp
